# pattern_recognition_algorithms

./: pyproject.toml
